fix selectbox overlapping

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -228,7 +228,8 @@ button .gui-html-container,
   color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
-#react-select-2-listbox {
+/* match any #react-select-XXX-listbox */
+div[id^="react-select-"][id$="-listbox"] {
   z-index: 9999;
 }
 
